[package]
name = "lcd-experiments"
version = "0.1.0"
authors = ["Riccardo Ripanti <riccardo.ripanti01@gmail.com>"]
edition = "2021"
resolver = "2"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[dependencies]
esp-idf-sys = { version = "0.32.1", features = ["binstart"] }
esp-idf-hal = "0.40.1"
phf = { version = "0.11.1", features = ["macros"] }
heapless = "0.7.16"

[build-dependencies]
embuild = "0.30.4"
image = "0.24.6"
