[package]
name = "lcd-experiments"
version = "0.1.0"
authors = ["Riccardo Ripanti <riccardo.ripanti01@gmail.com>"]
edition = "2021"
resolver = "2"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[dependencies]
hal = { package = "esp32-hal", version = "0.12.0" }
esp-backtrace = { version = "0.7.0", features = ["esp32", "panic-handler", "exception-handler", "print-uart"] }
esp-println = { version = "0.5.0", features = ["esp32"] }

phf = { version = "0.11.1", features = ["macros"], default-features = false }
heapless = "0.7.16"
critical-section = { version = "1.1.1", default-features = false }
